fixed spacing issues when there are less than 4 icons displayed

--- a/src/styles/_testing-location-list-item.scss
+++ b/src/styles/_testing-location-list-item.scss
@@ -119,11 +119,8 @@
 }
 
 .icons-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0 20px;
   font-size: 12px;
-  width: 330px;
   color: $primary-color;
 }
 
